feat: experimental Feedzy Tag Block for Feedzy Loop

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "npm-run-all build:*",
     "build:block": "wp-scripts build --webpack-src-dir=js/FeedzyBlock --output-path=build/block --output-filename=index.js",
     "build:loop": "wp-scripts build --webpack-src-dir=js/FeedzyLoop --output-path=build/loop --output-filename=index.js",
+    "build:tag": "wp-scripts build --webpack-src-dir=js/FeedzyTag --output-path=build/tag --output-filename=index.js",
     "build:onboarding": "wp-scripts build --webpack-src-dir=js/Onboarding --output-path=build/onboarding --output-filename=index.js",
     "build:feedback": "wp-scripts build --webpack-src-dir=js/FeedBack --output-path=build/feedback --output-filename=index.js",
     "build:actions": "wp-scripts build --webpack-src-dir=js/ActionPopup --output-path=build/action-popup --output-filename=index.js",
@@ -28,6 +29,7 @@
     "dev": "npm-run-all --parallel dev:*",
     "dev:block": "wp-scripts start --webpack-src-dir=js/FeedzyBlock --output-path=build/block --output-filename=index.js",
     "dev:loop": "wp-scripts start --webpack-src-dir=js/FeedzyLoop --output-path=build/loop --output-filename=index.js",
+    "dev:tag": "wp-scripts start --webpack-src-dir=js/FeedzyTag --output-path=build/tag --output-filename=index.js",
     "dev:onboarding": "wp-scripts start --webpack-src-dir=js/Onboarding --output-path=build/onboarding --output-filename=index.js",
     "dev:feedback": "wp-scripts start --webpack-src-dir=js/FeedBack --output-path=build/feedback --output-filename=index.js",
     "dev:actions": "wp-scripts start --webpack-src-dir=js/ActionPopup --output-path=build/action-popup --output-filename=index.js",
