--- a/.github/workflows/test-php.yml
+++ b/.github/workflows/test-php.yml
@@ -25,6 +25,23 @@ jobs:
       - name: Run PHPCS
         run: composer run lint
 
+  phpstan:
+    name: PHPStan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup PHP version
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "7.4"
+          extensions: simplexml
+      - name: Checkout source code
+        uses: actions/checkout@v4
+      - name: Install composer
+        run: |
+          composer install --prefer-dist --no-progress
+      - name: Run phpstan
+        run: composer run phpstan
+
   phpunit:
     name: PHPUnit
     runs-on: ubuntu-latest
