--- a/.github/workflows/diff-translations.yml
+++ b/.github/workflows/diff-translations.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.base_ref }}
-          path: neve-base
+          path: feedzy-base
       - name: Setup node 16
         uses: actions/setup-node@v4
         with:
@@ -33,7 +33,7 @@ jobs:
       - name: Checkout PR Branch (Head)
         uses: actions/checkout@v4
         with:
-          path: neve-head
+          path: feedzy-head
       - name: Build POT for PR Branch
         run: |
           cd feedzy-head
